fix window height on mobile

--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -4,6 +4,8 @@ body {
     color: #fafafa;
     font-family: 'Courier New', Courier, monospace;
     font-size: 12vmin;
+    height: 100%;
+    width: 100%;
     line-height: 1.25;
     margin: 0;
 }
@@ -22,8 +24,9 @@ button {
 }
 .container {
     position: relative;
-    min-height: 100vh;
-    min-width: 100vw;
+    height: 100%;
+    height: -webkit-fill-available;
+    width: 100%;
     overflow: hidden;
 }
 .center-y {
